bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
RustBuffer uniffi_marketdata_uniffi_fn_method_stockclient_base_url(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_corporate_actions(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_historical(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_intraday(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_ownership(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_snapshot(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_method_stockclient_technical(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockcorporateactionsclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockcorporateactionsclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_capital_changes_sync(void* ptr, RustBuffer date, RustBuffer start_date, RustBuffer end_date, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_dividends_sync(void* ptr, RustBuffer date, RustBuffer start_date, RustBuffer end_date, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_capital_changes(void* ptr, RustBuffer date, RustBuffer start_date, RustBuffer end_date
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_dividends(void* ptr, RustBuffer date, RustBuffer start_date, RustBuffer end_date
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_listing_applicants(void* ptr, RustBuffer date, RustBuffer start_date, RustBuffer end_date
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_listing_applicants_sync(void* ptr, RustBuffer date, RustBuffer start_date, RustBuffer end_date, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockhistoricalclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockhistoricalclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_candles_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_get_candles(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_get_stats(void* ptr, RustBuffer symbol
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_stats_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockintradayclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockintradayclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_candles_sync(void* ptr, RustBuffer symbol, RustBuffer timeframe, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_candles(void* ptr, RustBuffer symbol, RustBuffer timeframe
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_quote(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_ticker(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_tickers(void* ptr, RustBuffer typ
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_trades(void* ptr, RustBuffer symbol
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_volumes(void* ptr, RustBuffer symbol
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_quote_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_ticker_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_tickers_sync(void* ptr, RustBuffer typ, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_trades_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_volumes_sync(void* ptr, RustBuffer symbol, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stockownershipclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stockownershipclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_director_holdings_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_etf_holdings_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_director_holdings(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_etf_holdings(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort
);
uint64_t uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_institutional_trades(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort
);