bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockclient_base_url(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockclient_corporate_actions(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockclient_historical(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockclient_intraday(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockclient_ownership(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockclient_snapshot(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockclient_technical(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stockcorporateactionsclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stockcorporateactionsclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_capital_changes_sync(
        IntPtr @ptr,
        RustBuffer @date,
        RustBuffer @startDate,
        RustBuffer @endDate,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_dividends_sync(
        IntPtr @ptr,
        RustBuffer @date,
        RustBuffer @startDate,
        RustBuffer @endDate,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_capital_changes(
        IntPtr @ptr,
        RustBuffer @date,
        RustBuffer @startDate,
        RustBuffer @endDate
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_dividends(
        IntPtr @ptr,
        RustBuffer @date,
        RustBuffer @startDate,
        RustBuffer @endDate
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_get_listing_applicants(
        IntPtr @ptr,
        RustBuffer @date,
        RustBuffer @startDate,
        RustBuffer @endDate
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockcorporateactionsclient_listing_applicants_sync(
        IntPtr @ptr,
        RustBuffer @date,
        RustBuffer @startDate,
        RustBuffer @endDate,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stockhistoricalclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stockhistoricalclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_candles_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_get_candles(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_get_stats(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockhistoricalclient_stats_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stockintradayclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stockintradayclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_candles_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @timeframe,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_candles(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @timeframe
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_quote(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_ticker(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_tickers(
        IntPtr @ptr,
        RustBuffer @typ
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_trades(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockintradayclient_get_volumes(
        IntPtr @ptr,
        RustBuffer @symbol
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_quote_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_ticker_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_tickers_sync(
        IntPtr @ptr,
        RustBuffer @typ,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_trades_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockintradayclient_volumes_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stockownershipclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stockownershipclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_director_holdings_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_etf_holdings_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_director_holdings(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_etf_holdings(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_institutional_trades(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort
    );
